--- a/PMWE.ipynb
+++ b/PMWE.ipynb
@@ -37,7 +37,7 @@
     " - Hovsore = 10-minute average wind speeds, directions, turbulence at Høvsøre over 10 \n",
     "years, including timestamp\n",
     " - DEL = data of simulated 10-minute realizations of damage \n",
-    "equivalent loads (DEL) for the DTU 10MW reference wind turbine as function of various external \r\n",
+    "equivalent loads (DEL) for the DTU 10MW reference wind turbine as function of various external \n",
     "conditions, including wind speed, turbulence, wind shear."
    ]
   },
@@ -200,6 +200,8 @@
    "source": [
     "# Remove rows where Wsp is greater than 50\n",
     "Hovsore_filtered_data = Hovsore_data[Hovsore_data['Wsp'] <= 45].reset_index(drop=True)\n",
+    "# remove rows where TI is 0\n",
+    "Hovsore_filtered_data = Hovsore_filtered_data[Hovsore_filtered_data['TI'] > 0].reset_index(drop=True)\n",
     "\n",
     "# Add a new column 'Total_Cost' that is the product of 'Quantity' and 'Price_per_Item'\n",
     "Hovsore_filtered_data['SigmaU'] = Hovsore_filtered_data['Wsp'] * Hovsore_filtered_data['TI']"
@@ -750,7 +752,17 @@
     "SigmaSigma_QMC = SigmaSigmaFunc(U_QMC)\n",
     "SigmaU_QMC = LogNormDist(2, SQMC[:,1], MuSigmaU_QMC, SigmaSigma_QMC)\n",
     "# wind shear alpha\n",
-    "alpha_QMC = generate_wind_shear_alpha(U_QMC)"
+    "alpha_QMC = generate_wind_shear_alpha(U_QMC)\n",
+    "\n",
+    "#plot of sigmaU vs U for SMC and QMC\n",
+    "plt.figure()\n",
+    "plt.plot(Hovsore_filtered_data['Wsp'],Hovsore_filtered_data['SigmaU'],'xk', label = 'Data')\n",
+    "plt.plot(U_SMC,SigmaU_SMC,'o',markersize = 4,color = 'C1', label = 'SMC')\n",
+    "plt.plot(U_QMC,SigmaU_QMC,'*',markersize = 4,color = 'purple', label = 'QMC')\n",
+    "plt.legend()\n",
+    "plt.xlabel('U')\n",
+    "plt.ylabel('$\\sigma_U$')\n",
+    "plt.show()"
    ]
   },
   {
@@ -778,9 +790,7 @@
     "# Crude Monte-Carlo\n",
     "Mx_SMC = Mx_func(np.array([U_SMC.ravel(),SigmaU_SMC.ravel(),alpha_SMC.ravel()]).T)#np.array([U_SMC,SigmaU_SMC,alpha_SMC]).T\n",
     "# Quasi- Monte Carlo (QMC)\n",
-    "Mx_QMC = Mx_func(np.array([U_QMC,SigmaU_QMC,alpha_QMC]).T)\n",
-    "plt.plot(U_QMC,Mx_QMC,'*',markersize = 4,color = 'purple')\n",
-    "Mx_QMC"
+    "Mx_QMC = Mx_func(np.array([U_QMC,SigmaU_QMC,alpha_QMC]).T)\n"
    ]
   },
   {
@@ -812,7 +822,7 @@
    "id": "32040382",
    "metadata": {},
    "source": [
-    "# reliability and limit state analysis"
+    "# lifetime damage and equivalent loads\n"
    ]
   },
   {
@@ -837,8 +847,11 @@
     "LDEL_QMC_noUncertanty = (1/(np.arange(N_samples))*np.cumsum((Mx_func(np.array([U_QMC,SigmaU_QMC,alpha_QMC]).T).ravel())**m))**(1/m)\n",
     "\n",
     "LDEL_QMC = (1/(np.arange(N_samples))*np.cumsum((Xin[:,1].T*Mx_func(np.array([(Xin[:,2].T*U_QMC),SigmaU_QMC,alpha_QMC]).T).ravel())**m))**(1/m)\n",
-    "plt.plot(LDEL_QMC,'o',markersize = 4,color = 'k')\n",
-    "plt.plot(LDEL_QMC_noUncertanty,'o',markersize = 4,color = 'r')\n"
+    "\n",
+    "# plot\n",
+    "plt.plot(LDEL_QMC,'o',markersize = 4,color = 'k', label = 'LDEL uncertainty')\n",
+    "plt.plot(LDEL_QMC_noUncertanty,'o',markersize = 4,color = 'r', label = 'LDEL no uncertainty')\n",
+    "plt.legend()\n"
    ]
   },
   {
@@ -850,10 +863,32 @@
    "source": [
     "# lifetime damage\n",
     "Ldamage_QMC = 1/(np.arange(N_samples)*k)*np.cumsum((Xin[:,1].T*Mx_func(np.array([(Xin[:,2].T*U_QMC),SigmaU_QMC,alpha_QMC]).T).ravel())**m)\n",
-    "#plt.plot(Ldamage_QMC,'o',markersize = 4,color = 'k')\n",
+    "\n",
     "# no uncertanty\n",
     "Ldamage_QMC_noUncertanty = 1/(np.arange(N_samples)*k)*np.cumsum((Mx_func(np.array([U_QMC,SigmaU_QMC,alpha_QMC]).T).ravel())**m)\n",
-    "plt.plot(Ldamage_QMC_noUncertanty,'o',markersize = 4,color = 'r')\n",
+    "\n",
+    "#plot\n",
+    "plt.plot(Ldamage_QMC,'o',markersize = 4,color = 'k', label = 'L damage uncertainty')\n",
+    "plt.plot(Ldamage_QMC_noUncertanty,'o',markersize = 4,color = 'r', label = 'L damage no uncertainty')\n",
+    "plt.legend()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8dab035",
+   "metadata": {},
+   "source": [
+    "# Limit state function and probability of failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca19b128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "#limit state function\n",
     "g =lambda x: x[:,0] - 1/(N_samples*k)*np.sum((x[:,1].T*Mx_func(np.array([(x[:,2].T*U_QMC),SigmaU_QMC,alpha_QMC]).T).ravel())**m)\n",
     "\n",
