--- a/PMWE.ipynb
+++ b/PMWE.ipynb
@@ -18,14 +18,14 @@
     "# Importing libraries once\n",
     "\n",
     "import numpy as np\n",
-    "import os\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "import scipy.stats as stats\n",
     "import scipy\n",
-    "import matplotlib.pyplot as plt\n",
-    "import sklearn\n",
-    "import sklearn.neural_network\n",
-    "import openturns as ot"
+    "from pandas.plotting import scatter_matrix\n",
+    "import seaborn as sns\n",
+    "from windrose import WindroseAxes"
    ]
   },
   {
@@ -169,16 +169,9 @@
     "# Directory containing the files (current working directory)\n",
     "current_dir = os.getcwd()  # gets the path of the folder where the code is run\n",
     "Hovsore_data_filepath = os.path.join(current_dir, 'HovsoreData_Sonic_100m_2004-2013.csv')\n",
-    "DEL_data_filepath = os.path.join(current_dir, 'ML_ExampleDataSet.xlsx')\n",
+    "\n",
     "# Load Hovsore wind data CSV\n",
-    "Hovsore_data = pd.read_csv(Hovsore_data_filepath)\n",
-    "\n",
-    "# Load DEL data from Excel\n",
-    "DEL_data = pd.read_excel(DEL_data_filepath)  # Read all sheets for now\n",
-    "\n",
-    "# Preview the datasets\n",
-    "Hovsore_data.head()\n",
-    "#DEL_data.head()\n"
+    "Hovsore_data = pd.read_csv(Hovsore_data_filepath)"
    ]
   },
   {
@@ -316,14 +309,24 @@
     }
    ],
    "source": [
-    "# Remove rows where Wsp is greater than 50\n",
-    "Hovsore_filtered_data = Hovsore_data[Hovsore_data['Wsp'] <= 45].reset_index(drop=True)\n",
-    "# remove rows where TI is 0\n",
-    "Hovsore_filtered_data = Hovsore_filtered_data[Hovsore_filtered_data['TI'] > 0].reset_index(drop=True)\n",
+    "# Optimization 1: Efficient data cleaning with vectorized operations and interpolation\n",
+    "def clean_data(df):\n",
+    "    # Replacing windspeeds greater than 45 with NaN\n",
+    "    df['Wsp'] = np.where(df['Wsp'] > 45, np.nan, df['Wsp'])\n",
+    "    \n",
+    "    # Replacing turbulence intensity (TI) values with NaN\n",
+    "    df['TI'] = np.where((df['TI'] > 1.0) | (df['TI'] <= 0), pd.NA, df['TI'])\n",
+    "    df['TI,detrend'] = np.where(df['TI,detrend'] <= 1.5, np.nan, df['TI,detrend'])\n",
+    "    # Using interpolation instead of backward fill to handle missing data\n",
+    "    df_cleaned = df.interpolate(method='linear', limit_direction='both')\n",
+    "    \n",
+    "    # Creating a new feature 'SigmaU' as the product of Wsp and TI\n",
+    "    df_cleaned['SigmaU'] = df_cleaned['Wsp'] * df_cleaned['TI']\n",
+    "    \n",
+    "    return df_cleaned.dropna()\n",
     "\n",
-    "# Add a new column 'Total_Cost' that is the product of 'Quantity' and 'Price_per_Item'\n",
-    "Hovsore_filtered_data['SigmaU'] = Hovsore_filtered_data['Wsp'] * Hovsore_filtered_data['TI']\n",
-    "Hovsore_data.head()"
+    "# Apply data cleaning on the dataset\n",
+    "Hovsore_clean_data = clean_data(Hovsore_data)"
    ]
   },
   {
@@ -353,6 +356,7 @@
    ],
    "source": [
     "# Convert the Timestamp column to datetime format\n",
+    "'''\n",
     "Hovsore_filtered_data['Timestamp'] = pd.to_datetime(Hovsore_filtered_data['Timestamp'], format='%Y%m%d%H%M')\n",
     "\n",
     "# Plotting Wsp against Timestamp\n",
@@ -365,7 +369,8 @@
     "plt.tight_layout()\n",
     "\n",
     "# Display the plot\n",
-    "plt.show()"
+    "plt.show()\n",
+    "'''"
    ]
   },
   {
@@ -402,6 +407,31 @@
     "Weibullk = Weib0.x[1]\n",
     "\n",
     "print('Distribution parameters using the max-likelihood method: A = ' + str(Weib0.x[0]) + ', k = ' + str(Weib0.x[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02415f68-c41d-4e71-88e1-a96d79ecff34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a histogram of the wind speed data\n",
+    "counts1, bin_edges1 = np.histogram(Wsp0, bins=50, density=True)\n",
+    "bin_centers1 = (bin_edges1[:-1] + bin_edges1[1:]) / 2\n",
+    "\n",
+    "# Calculate the Weibull distribution for the estimated parameters\n",
+    "pdf_weibull_fit1 = stats.weibull_min.pdf(bin_centers1, c=Weibullk, scale=WeibullA)\n",
+    "\n",
+    "# Plot the histogram and the fitted Weibull distribution\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.bar(bin_centers1, counts1, width=np.diff(bin_edges1), alpha=0.6, color='grey', label=\"Wind Data Histogram\", edgecolor='black')\n",
+    "plt.plot(bin_centers1, pdf_weibull_fit1, 'r-', label=f'Weibull Fit: A={WeibullA:.2f}, k={Weibullk:.2f}', lw=2)\n",
+    "plt.xlabel('Wind Speed [m/s]')\n",
+    "plt.ylabel('Probability Density')\n",
+    "plt.title('Wind Speed Data and Weibull Fit')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
