--- a/PMWE.ipynb
+++ b/PMWE.ipynb
@@ -9192,10 +9192,10 @@
     "    # new wind inputs\n",
     "    #U_SMC, SigmaU_SMC, alpha_SMC = generate_SMC(N_samples, uniform_distribution, Weibullk, WeibullA)\n",
     "    U_QMC, SigmaU_QMC, alpha_QMC = generate_QMC_Q4(N_samples, uniform_distribution, Weibullk, WeibullA, Xw)\n",
-    "    \n",
+    "    U_QMC_noUncertanty, SigmaU_QMC_noUncertanty, alpha_QMC_noUncertanty = generate_QMC(N_samples, uniform_distribution, Weibullk, WeibullA):\n",
     "\n",
     "    # lifetime equivalent damage loads\n",
-    "    LDEL_QMC_noUncertanty = (1/N_samples*np.sum((Mx_func(np.array([U_QMC,SigmaU_QMC,alpha_QMC]).T).ravel())**m))**(1/m)\n",
+    "    LDEL_QMC_noUncertanty = (1/N_samples*np.sum((Mx_func(np.array([U_QMC_noUncertanty,SigmaU_QMC_noUncertanty,alpha_QMC_noUncertanty]).T).ravel())**m))**(1/m)\n",
     "    LDEL_QMC = (1/N_samples*np.sum((Xin[:,1].T*Mx_func(np.array([(U_QMC),SigmaU_QMC,alpha_QMC]).T).ravel())**m))**(1/m)\n",
     "    \n",
     "    # lifetime damage\n",
