--- a/PMWE.ipynb
+++ b/PMWE.ipynb
@@ -617,80 +617,81 @@
     }
    ],
    "source": [
-    "Hovsore_filtered_data['Year'] = Hovsore_filtered_data['Timestamp'].dt.year\n",
+    "data = Hovsore_clean_data\n",
+    "wind_speeds = data['Wsp']\n",
+    "turbulence =data['SigmaU']\n",
     "\n",
-    "# Step 1: Introduce 1% uncertainty for wind speed measurement\n",
-    "# Calculate 1% of each wind speed value and create random noise\n",
-    "measurement_noise = np.random.normal(loc=0, scale=0.01 * Hovsore_filtered_data['Wsp'], size=Hovsore_filtered_data['Wsp'].shape)\n",
-    "Hovsore_filtered_data['Wsp_with_uncertainty'] = Hovsore_filtered_data['Wsp'] + measurement_noise\n",
+    "# Function for bootstrapping using continuous periods\n",
+    "def bootstrap_continuous(data, n_iterations=1000, sample_size=None, ci=95):\n",
+    "    if sample_size is None:\n",
+    "        sample_size = len(data) // 10  # Default sample size to a tenth of the data length\n",
     "\n",
-    "# Step 2: Define a joint distribution of wind speed and another relevant variable, e.g., wind direction\n",
-    "# Let's assume wind speed and wind direction are joint variables for demonstration purposes\n",
-    "wind_speed = Hovsore_filtered_data['Wsp_with_uncertainty'].values\n",
-    "turbulence = Hovsore_filtered_data['SigmaU'].values\n",
+    "    bootstrapped_means = []\n",
+    "    for i in range(n_iterations):\n",
+    "        # Randomly select a starting point for the sample\n",
+    "        start_idx = np.random.randint(0, len(data) - sample_size)\n",
+    "        resample = data[start_idx:start_idx + sample_size]\n",
+    "        # Calculate the mean and add it to the list\n",
+    "        bootstrapped_means.append(np.mean(resample))\n",
     "\n",
-    "# Calculate the mean and covariance matrix for the joint distribution\n",
-    "joint_mean = np.array([np.mean(wind_speed), np.mean(turbulence)])\n",
-    "cov_matrix = np.cov(wind_speed, turbulence)\n",
+    "    # Calculate confidence intervals\n",
+    "    lower_percentile = (100 - ci) / 2\n",
+    "    upper_percentile = 100 - lower_percentile\n",
+    "    lower_bound = np.percentile(bootstrapped_means, lower_percentile)\n",
+    "    upper_bound = np.percentile(bootstrapped_means, upper_percentile)\n",
     "\n",
-    "# Step 3: Add 1% uncertainty to the joint distribution fit\n",
-    "# Create random noise for the joint distribution fit\n",
-    "joint_noise = np.random.multivariate_normal([0, 0], cov_matrix * 0.01, size=len(wind_speed))\n",
+    "    return {\n",
+    "        'mean': np.mean(bootstrapped_means),\n",
+    "        'std_dev': np.std(bootstrapped_means),\n",
+    "        'lower_bound': lower_bound,\n",
+    "        'upper_bound': upper_bound,\n",
+    "        'all_means': bootstrapped_means\n",
+    "    }\n",
     "\n",
-    "# Add the joint noise to wind speed and direction\n",
-    "wind_speed_with_joint_uncertainty = wind_speed + joint_noise[:, 0]\n",
-    "turbulence_with_joint_uncertainty = turbulence + joint_noise[:, 1]\n",
+    "# Perform bootstrap analysis on wind speed and turbulence data\n",
+    "bootstrap_result1 = bootstrap_continuous(wind_speeds)\n",
+    "bootstrap_result2 = bootstrap_continuous(turbulence)\n",
     "\n",
-    "# Create a new DataFrame to hold the joint variables with added uncertainty\n",
-    "Hovsore_filtered_data['Wsp_joint_uncertainty'] = wind_speed_with_joint_uncertainty\n",
-    "Hovsore_filtered_data['SigmaU_joint_uncertainty'] = turbulence_with_joint_uncertainty\n",
+    "# Extract means and standard deviations from the bootstrap results\n",
+    "mean_wind_speed = bootstrap_result1['mean']\n",
+    "mean_turbulence = bootstrap_result2['mean']\n",
+    "std_dev_wind_speed = bootstrap_result1['std_dev']\n",
+    "std_dev_turbulence = bootstrap_result2['std_dev']\n",
     "\n",
-    "# Step 4: Adjust the wind speed data to achieve a specific Coefficient of Variation (CoV)\n",
-    "desired_cov = 0.5  # Desired Coefficient of Variation (adjust as needed)\n",
-    "mean_wsp_with_joint_uncertainty = Hovsore_filtered_data['Wsp_joint_uncertainty'].mean()\n",
-    "desired_std = mean_wsp_with_joint_uncertainty * desired_cov\n",
-    "scaling_factor = desired_std / Hovsore_filtered_data['Wsp_joint_uncertainty'].std()\n",
-    "Hovsore_filtered_data['Wsp_adjusted'] = Hovsore_filtered_data['Wsp_joint_uncertainty'] * scaling_factor\n",
+    "# Apply 1% uncertainty to wind speed measurement\n",
+    "mean_wind_speed_adjusted = mean_wind_speed * 1.01\n",
+    "std_dev_wind_speed_adjusted = std_dev_wind_speed * 1.01\n",
     "\n",
-    "# Step 5: Bootstrapping function to estimate the distribution of annual mean wind speeds with all uncertainties included\n",
-    "def bootstrap_annual_means(wind_speed_data, num_bootstrap_samples=1000):\n",
-    "    \"\"\"\n",
-    "    Perform bootstrapping to calculate the distribution of annual mean wind speeds.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    wind_speed_data (pd.DataFrame): DataFrame containing 'Year' and 'Wsp' columns.\n",
-    "    num_bootstrap_samples (int): Number of bootstrap samples to generate.\n",
+    "# Calculate the correlation coefficient between wind speed and turbulence\n",
+    "correlation = 0.2\n",
     "\n",
-    "    Returns:\n",
-    "    bootstrap_means (np.array): Array of mean wind speeds for each bootstrap sample.\n",
-    "    \"\"\"\n",
-    "    # Group data by year and calculate the annual mean wind speed\n",
-    "    annual_means = wind_speed_data.groupby('Year')['Wsp'].mean().values\n",
-    "    \n",
-    "    # Perform bootstrapping: resample annual means with replacement\n",
-    "    bootstrap_means = np.random.choice(annual_means, size=(num_bootstrap_samples, len(annual_means)), replace=True).mean(axis=1)\n",
-    "    \n",
-    "    return bootstrap_means\n",
+    "# Compute combined mean (mean of the sum of wind speed and turbulence)\n",
+    "combined_mean = mean_wind_speed_adjusted + mean_turbulence\n",
     "\n",
-    "# Step 6: Perform bootstrapping on the adjusted wind speed data\n",
-    "bootstrap_means_final = bootstrap_annual_means(Hovsore_filtered_data[['Year', 'Wsp_adjusted']].rename(columns={'Wsp_adjusted': 'Wsp'}))\n",
+    "# Compute combined standard deviation, accounting for correlation\n",
+    "combined_variance = (std_dev_wind_speed_adjusted**2 + std_dev_turbulence**2 +\n",
+    "                     2 * correlation * std_dev_wind_speed_adjusted * std_dev_turbulence)\n",
+    "combined_std_dev = np.sqrt(combined_variance)\n",
     "\n",
-    "# Step 7: Plot the final bootstrapped distribution\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.hist(bootstrap_means_final, bins=100, color='steelblue', edgecolor='black', alpha=0.7)\n",
-    "plt.title(f\"Distribution of Bootstrapped Annual Mean Wind Speeds\\n(1% Measurement & Joint Distribution Uncertainty, Desired CoV = {desired_cov})\")\n",
-    "plt.xlabel(\"Annual Mean Wind Speed (m/s)\")\n",
-    "plt.ylabel(\"Frequency\")\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
+    "# Apply an additional 1% uncertainty for the joint-distribution fit\n",
+    "combined_mean_adjusted = combined_mean * 1.01\n",
+    "combined_std_dev_adjusted = combined_std_dev * 1.01\n",
     "\n",
-    "# Step 8: Calculate and print ensemble statistics for the final distribution\n",
-    "mean_final = np.mean(bootstrap_means_final)\n",
-    "std_final = np.std(bootstrap_means_final)\n",
-    "cov_final = std_final / mean_final\n",
+    "# Print results\n",
+    "print(f\"Estimated Mean of Wind Speeds (with 1% measurement uncertainty): {mean_wind_speed_adjusted}\")\n",
+    "print(f\"Estimated Mean of Turbulence: {mean_turbulence}\")\n",
+    "print(f\"Combined Mean (with 1% joint-distribution fit uncertainty): {combined_mean_adjusted * 1/combined_mean_adjusted}\")\n",
+    "print(f\"Standard Deviation of Wind Speeds (with 1% measurement uncertainty): {std_dev_wind_speed_adjusted}\")\n",
+    "print(f\"Standard Deviation of Turbulence: {std_dev_turbulence}\")\n",
+    "print(f\"Correlation between Wind Speeds and Turbulence: {correlation}\")\n",
+    "print(f\"Combined Standard Deviation (with 1% joint-distribution fit uncertainty): {combined_std_dev_adjusted * 1/combined_mean_adjusted}\")\n",
     "\n",
-    "\n",
-    "print(f\"Ensemble Statistics with All Uncertainties Included:\\nMean: {mean_final:.2f} m/s\\nStandard Deviation: {std_final:.2f} m/s\\nCoefficient of Variation: {cov_final:.2f}\")\n"
+    "# Plotting the distribution of bootstrapped means\n",
+    "plt.hist(bootstrap_result1['all_means'], bins=100)\n",
+    "plt.xlabel('Bootstrap Means of Wind Speed')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Distribution of Bootstrapped Wind Speed Means')\n",
+    "plt.show()"
    ]
   },
   {
@@ -738,12 +739,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "045c9f2b-da53-4652-9312-eb0436af8e77",
+   "cell_type": "markdown",
+   "id": "7eccab91-62f9-4c6a-b694-e4af7598fdf8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now we have two data frames, which contain respectively the input variables and the dependent variables for our machine learning problem. However, we are not sure whether these are appropriately synchronized, i.e., whether the indexes of the two data frames match. Pandas provides several means of comparing data columns and merging data frames. One way of doing it is with the df.merge() command where df is the name of the data frame. Here we will use an \"inner\" merging, which means that only data entries which exist in both data frames to be merged, are being retained. In this way the merging also acts as a filter to eliminate entries where some of the data may not be available. In supervised machine learning, useful information is provided by from data entry pairs where both the input variables and the dependent variable are valid. If one finds it more convenient to keep the input feature and dependent variable data frames separate, a similar synchronization can be done by element-wise comparison of the data frames, using the df.where() command."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -9387,7 +9388,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -9401,7 +9402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
